--- a/configs/backbone_eval_CUB.yaml
+++ b/configs/backbone_eval_CUB.yaml
@@ -1,14 +1,8 @@
 MODEL:
   NAME: "inception_v3"
+  CKPT_PATH: "checkpoints/inception_v3_ft_CUB.pt"
 DATASET:
   NAME: "CUB"
   ROOT_DIR: "datasets"
   PREPROCESS: "CBM"
-OPTIM:
-  LR: 1e-2
-  EPOCHS: 200
-  BATCH_SIZE: 64
-  STEP_SIZE: 20
-  GAMMA: 0.1
-  WEIGHT_DECAY: 0.0004
 SEED: 42
