--- a/configs/dev_train_CUB_full.yaml
+++ b/configs/dev_train_CUB_full.yaml
@@ -14,11 +14,13 @@ DATASET:
   USE_ATTRS: "binary"
   USE_ATTR_MASK: None
   USE_SPLITS: "data/cub/split_image_ids.npz"
+  AUGMENTATION: "crop"
   CROP: False
 OPTIM:
   OPTIMIZER: SGD
   LR: 1e-3
-  EPOCHS: 400
+  EPOCHS: 200
   BATCH_SIZE: 64
   WEIGHT_DECAY: 4e-4
+  EARLY_STOP: 30
 SEED: 42
