--- a/configs/dev_train_CUB_full.yaml
+++ b/configs/dev_train_CUB_full.yaml
@@ -12,7 +12,7 @@ DATASET:
   NUM_ATTRS: 312
   ROOT_DIR: "datasets"
   USE_ATTRS: "binary"
-  USE_ATTR_MASK: None
+  USE_ATTR_MASK: False
   USE_SPLITS: "data/cub/split_image_ids.npz"
   AUGMENTATION: "crop"
   CROP: False
