--- a/configs/dev_train_CUB_custom.yaml
+++ b/configs/dev_train_CUB_custom.yaml
@@ -14,7 +14,7 @@ DATASET:
   USE_ATTRS: "binary"
   USE_ATTR_MASK: "data/cub/part_specific_attribute_mask.txt"
   USE_SPLITS: "data/cub/split_image_ids.npz"
-  AUGMENTATION: "crop"
+#  AUGMENTATION: "crop"
   CROP: False
 OPTIM:
   OPTIMIZER: SGD
