--- a/configs/dev_train_CUB_full.yaml
+++ b/configs/dev_train_CUB_full.yaml
@@ -14,7 +14,7 @@ DATASET:
   USE_ATTRS: "binary"
   USE_ATTR_MASK: False
   USE_SPLITS: "data/cub/split_image_ids.npz"
-  AUGMENTATION: "crop"
+#  AUGMENTATION: "crop"
   CROP: False
 OPTIM:
   OPTIMIZER: SGD
