--- a/configs/dev_train_CUB.yaml
+++ b/configs/dev_train_CUB.yaml
@@ -14,8 +14,7 @@ DATASET:
   USE_ATTRS: "data/cub/attributes.txt"
   USE_ATTR_MASK: "data/cub/cbm_attribute_mask.txt"
   USE_SPLITS: "data/cub/split_image_ids.npz"
-#  AUGMENTATION: "crop"
-  CROP: False
+  AUGMENTATION: null
 OPTIM:
   OPTIMIZER: SGD
   LR: 1e-3
