--- a/configs/dino_train_CUB.yaml
+++ b/configs/dino_train_CUB.yaml
@@ -2,19 +2,21 @@ model:
   name: "dinov2_vitb14_reg_cub_ft"
   loss:
     l_y: 1
-    l_c: 1e-2
+    l_c: 2e-2
+    l_cpt: 0
+    l_ad: 0
 dataset:
   name: "CUB"
   num_attrs: 112
   root_dir: "datasets"
-  use_attrs: "data/cub/attributes.txt"
+  use_attrs: "data/cub/cbm_binary_attributes.txt"
   use_attr_mask: "data/cub/cbm_attribute_mask.txt"
   use_splits: "data/cub/split_image_ids.npz"
   augmentation: null
 optim:
   lr: 1e-4
-  epochs: 100
+  epochs: 200
   batch_size: 64
   weight_decay: 4e-4
-  early_stop: 8
+  early_stop: 10
 seed: 42
